tools/tests/errors/surf_lex_09.ki
# LEXER: an octal literal prefix with no octal digits following it
var x = 0o